--- a/tapper/Base.lproj/Main.storyboard
+++ b/tapper/Base.lproj/Main.storyboard
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="tapper" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +19,73 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="LIi-ey-3sg">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z96-4M-lIW" userLabel="PlayBtn">
+                                <rect key="frame" x="122" y="330" width="356" height="190"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Z96-4M-lIW" secondAttribute="height" multiplier="15:8" id="Kt2-u1-YOc"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
+                                <state key="normal" image="playbtn"/>
+                                <connections>
+                                    <action selector="playBtnPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rG2-Dl-Mrc"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Tapper" translatesAutoresizingMaskIntoConstraints="NO" id="90P-JN-S0Z">
+                                <rect key="frame" x="226" y="40" width="149" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="90P-JN-S0Z" secondAttribute="height" multiplier="292:87" id="93e-Qq-caz"/>
+                                </constraints>
+                            </imageView>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cnX-z8-slz" userLabel="TapBtn">
+                                <rect key="frame" x="171" y="134" width="258" height="266"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="cnX-z8-slz" secondAttribute="height" multiplier="172:177" id="xAo-Ec-aSR"/>
+                                </constraints>
+                                <state key="normal" image="coin"/>
+                                <connections>
+                                    <action selector="coinTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="egv-1x-yQm"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Z96-4M-lIW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="39c-Yl-Kkd"/>
+                            <constraint firstItem="Z96-4M-lIW" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="100" id="6ev-j8-Vly"/>
+                            <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="cnX-z8-slz" secondAttribute="trailing" priority="998" constant="100" id="DO7-ct-Hvq"/>
+                            <constraint firstItem="90P-JN-S0Z" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="IUV-KY-MTY"/>
+                            <constraint firstItem="90P-JN-S0Z" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leading" multiplier="4:3" constant="50" id="Q7x-lv-Bec"/>
+                            <constraint firstItem="cnX-z8-slz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="QIz-ch-pLu"/>
+                            <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="Z96-4M-lIW" secondAttribute="trailing" multiplier="4:3" constant="100" id="Sol-mC-JT6"/>
+                            <constraint firstItem="cnX-z8-slz" firstAttribute="leading" relation="lessThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leading" priority="998" constant="100" id="WTJ-HL-aZ1"/>
+                            <constraint firstItem="cnX-z8-slz" firstAttribute="top" relation="greaterThanOrEqual" secondItem="90P-JN-S0Z" secondAttribute="bottom" constant="50" id="YpZ-Jy-naC"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Z96-4M-lIW" secondAttribute="bottom" constant="80" id="a0x-ih-WY8"/>
+                            <constraint firstItem="LIi-ey-3sg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="iEc-6y-gHM"/>
+                            <constraint firstItem="cnX-z8-slz" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottom" constant="-200" id="lw6-IU-Id4"/>
+                            <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="90P-JN-S0Z" secondAttribute="trailing" multiplier="4:3" constant="100" id="uKP-C0-HkU"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="LIi-ey-3sg" secondAttribute="bottom" id="wJH-si-XzU"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="LIi-ey-3sg" secondAttribute="trailing" constant="-20" id="xn2-yV-uak"/>
+                            <constraint firstItem="90P-JN-S0Z" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="yBD-DK-kZg"/>
+                            <constraint firstItem="LIi-ey-3sg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="ysz-YG-4Cn"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="playBtn" destination="Z96-4M-lIW" id="7Mm-7I-MLH"/>
+                        <outlet property="tapBtn" destination="cnX-z8-slz" id="fxJ-G3-oVX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="305" y="429"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Background" width="640" height="960"/>
+        <image name="Tapper" width="497" height="107"/>
+        <image name="coin" width="244" height="268"/>
+        <image name="playbtn" width="356" height="175"/>
+    </resources>
 </document>
